Fix .song overflow issue, give .song items dynamic sizing

--- a/src/pages/Artist/components/Song/style.css
+++ b/src/pages/Artist/components/Song/style.css
@@ -1,24 +1,24 @@
 .song {
   background-color: white;
+  border-radius: 12px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 
 .song-row {
   display: flex;
   flex-flow: row nowrap;
-  gap: 12px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
-    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  gap: 16px;
   padding: 10px;
   border-radius: 12px;
   align-items: center;
-  width: 360px;
+  max-width: 400px;
 }
 
 .song-item {
   display: flex;
   flex: 1;
   font-size: 14px;
-  justify-content: center;
   align-items: center;
   transition: all 0.15s ease-in-out;
 }
